# fiap-tech-challenge-churn

./: README.md  mlflow.db  pyproject.toml
.ipynb_checkpoints/: 02_mlp_pytorch-checkpoint.ipynb
docs/: model_card.md
mlruns/1/models/m-95513a13696b4d10a079976b1e2e4507/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-ef76d1ba6ab347bbaea00da1c2857efa/artifacts/: MLmodel  conda.yaml  model.pkl
models/: mlp_churn.pt  preprocessor.pkl
notebooks/: 01_eda_baselines.ipynb
src/api/: main.py  schemas.py
src/data/: preprocessing.py
src/fiap_tech_challenge_churn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: mlp.py
tests/: test_api.py  test_schema.py  test_smoke.py
