[project]
name = "fiap-tech-challenge-churn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "scikit-learn>=1.4",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pandas>=2.0",
    "pandera>=0.18",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]